added some images

--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
     <h2>Products / packaging solutions</h2>
     <h1>Packaging cups</h1>
     <p>We manufacture plastic cups for packaging of food (yoghurt, ice cream, cheese, butter, cream, juice, water) and non-food items. Many of our cups are printable for branding.</p>
+    <h1>Branding options</h1>
+    <div class="item-list1">
+        <img src='https://www.techpakindustries.com/media/images/Direct_Printed_Cups_Yoghurt.original.jpg'>
+        <p>Direct printing</p>
+    </div>
+    <div class="item-list2">
+        <img src='https://www.techpakindustries.com/media/images/Shrink_Sleeve_Printed_Cups.original.jpg'>
+        <p>Shrink sleeving</p>
+    </div>
+    <div class="item-list3">
+        <img src='https://www.techpakindustries.com/media/images/IML_Printed_Cups.original.jpg'>
+        <p>In-mould labelling(IML)</p>
+    </div>
 
 </body>
 
