--- a/index.html
+++ b/index.html
@@ -40,6 +40,60 @@
         <img src='https://www.techpakindustries.com/media/images/IML_Printed_Cups.original.jpg'>
         <p>In-mould labelling(IML)</p>
     </div>
+    <div class="item-labels">
+        <h2>120 Series plastic cups</h2>
+        <table class='table'>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Diameter(mm)</th>
+                    <th>Depth(mm)</th>
+                    <th>Volume(ml)</th>
+                    <th>Printable</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>120/250</th>
+                    <th>120</th>
+                    <th>44</th>
+                    <th>250</th>
+                    <th>yes</th>
+
+                </tr>
+                <tr>
+                    <th>120/350</th>
+                    <th>120</th>
+                    <th>n/a</th>
+                    <th>350</th>
+                    <th>no</th>
+
+                </tr>
+                <tr>
+                    <th>120/500</th>
+                    <th>120</th>
+                    <th>67</th>
+                    <th>500</th>
+                    <th>yes</th>
+                </tr>
+                <tr>
+                    <th>120/750</th>
+                    <th>120</th>
+                    <th>108</th>
+                    <th>750</th>
+                    <th>yes</th>
+                </tr>
+                <tr>
+                    <th>120/1000</th>
+                    <th>120</th>
+                    <th>133</th>
+                    <th>1000</th>
+                    <th>yes</th>
+                </tr>
+            </tbody>
+        </table>
+        <img src='https://www.techpakindustries.com/media/images/120-500.width-170.jpg'>
+    </div>
 
 </body>
 
